src/golden/systemtests/errors/test.golden/testitems.st
Tests require a name

	test